--- a/config.yml
+++ b/config.yml
@@ -4,3 +4,6 @@
 # Change the value of the node below to the folder you want to copy world files from.
 # If not specified, or non-existant, the plugin will simply generate a normal world on command.
 world-to-reset: world
+reset-no-people: false
+reload-translations: true
+translation: en
